if(IMGUI_BACKEND_SDL)
  if (IMGUI_BACKEND_OPENGL2)
    add_subdirectory(example_sdl_opengl2)
  endif()
  if (IMGUI_BACKEND_OPENGL3)
    add_subdirectory(example_sdl_opengl3)
  endif()
endif()

if(IMGUI_BACKEND_GLFW)
  if (IMGUI_BACKEND_OPENGL2)
    add_subdirectory(example_glfw_opengl2)
  endif()
  if (IMGUI_BACKEND_OPENGL3)
    add_subdirectory(example_glfw_opengl3)
  endif()
endif()
