add_library(imgui-gl3w INTERFACE)
target_sources(imgui-gl3w INTERFACE "${CMAKE_CURRENT_LIST_DIR}/GL/gl3w.c")
target_compile_definitions(imgui-gl3w INTERFACE -DIMGUI_IMPL_OPENGL_LOADER_GL3W=1)
target_include_directories(imgui-gl3w INTERFACE "${CMAKE_CURRENT_LIST_DIR}/")
if(APPLE)
  target_link_libraries(imgui-gl3w INTERFACE "-framework CoreFoundation")
else()
  target_link_libraries(imgui-gl3w INTERFACE ${CMAKE_DL_LIBS})
endif()
